--- a/.github/workflows/main_solarpayconto.yml
+++ b/.github/workflows/main_solarpayconto.yml
@@ -19,10 +19,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Release --project /Users/asset/Documents/Solar-Pay/SolarPayAPI/SolarPayAPI.csproj
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp --project /Users/asset/Documents/Solar-Pay/SolarPayAPI/SolarPayAPI.csproj
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
