--- a/.github/workflows/main_solarpayconto.yml
+++ b/.github/workflows/main_solarpayconto.yml
@@ -19,10 +19,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build .\SolarPayAPI\SolarPayAPI.csproj --configuration Release
+        run: dotnet build ./src/SolarPayAPI/SolarPayAPI.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish .\SolarPayAPI\SolarPayAPI.csproj --configuration Release --output .\SolarPayAPI\myapp
+        run: dotnet publish ./src/SolarPayAPI/SolarPayAPI.csproj --configuration Release --output .\SolarPayAPI\myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
