--- a/.github/workflows/sconto_solarpayconto.yml
+++ b/.github/workflows/sconto_solarpayconto.yml
@@ -48,9 +48,14 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.CLIENT_ID }}
-          tenant-id: ${{ secrets.TENANT_ID }}
-          subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
+
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          
+          client-secret: ${{ secrets.AZUREAPPSERVICE_CLIENTSECRET }}
+          
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
