--- a/.github/workflows/sconto_solarpayconto.yml
+++ b/.github/workflows/sconto_solarpayconto.yml
@@ -48,14 +48,10 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
-
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
-          
-          client-secret: ${{ secrets.AZUREAPPSERVICE_CLIENTSECRET }}
-          
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+          secret: ${{ secrets.AZUREAPPSERVICE_CLIENTSECRET }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
