--- a/.github/workflows/sconto_solarpayconto.yml
+++ b/.github/workflows/sconto_solarpayconto.yml
@@ -3,7 +3,7 @@ name: Build and deploy ASP.Net Core app to Azure Web App - solarpayconto
 on:
   push:
     branches:
-      - maine
+      - main
   workflow_dispatch:
 
 jobs:
