--- a/.github/workflows/sconto_solarpayconto.yml
+++ b/.github/workflows/sconto_solarpayconto.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     environment:
-      name: 'production'
+      name: 'main'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write
