--- a/.github/workflows/sconto_solarpayconto.yml
+++ b/.github/workflows/sconto_solarpayconto.yml
@@ -2,7 +2,7 @@ name: Build and deploy ASP.Net Core app to Azure Web App - solarpayconto
 
 on:
   push:
-    branches:
+    branch:
       - main
   workflow_dispatch:
 
