--- a/.github/workflows/sconto_solarpayconto.yml
+++ b/.github/workflows/sconto_solarpayconto.yml
@@ -48,11 +48,15 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.CLIENT_ID }}
-          tenant-id: ${{ secrets.TENANT_ID }}
-          subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
+          client-id: 'd2d9ebc2-3afe-4839-a2bd-7a91b4bb57d8'
+          tenant-id: 'b9528b34-7933-4e6f-9ac9-f4aaed188725'
+          subscription-id: 'dbd355cc-0d75-429a-83d3-d6011ba640bf'
+          
           auth-type: service_principal
-          allow-no-subscriptions: true  
+          allow-no-subscriptions: true
+          enable-AzPSSession: false
+          environment: azurecloud
+          audience: api://AzureADTokenExchange  
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
