--- a/.github/workflows/sconto_sconto.yml
+++ b/.github/workflows/sconto_sconto.yml
@@ -55,6 +55,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'solarpayconto'
+          app-name: 'sconto'
           slot-name: 'production'
           package: ${{ github.workspace }}/myapp
